--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,10 @@
 
 
-#deployment:
-#  dockerhub:
-#    branch: master
-#    commands:
-#      - $DOCKER_HUB
+deployment:
+  dockerhub:
+    branch: master
+    commands:
+      - $DOCKER_HUB
 
 test:
   override:    
